Satyn Velankar 26SEP2016

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,8 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/hoppr-ui.js"></script>
+    <script src="vendor/fusioncharts.charts.js"></script>
+    <script src="vendor/fusioncharts.js"></script>
 
     {{content-for "body-footer"}}
   </body>
