--- a/tests/index.html
+++ b/tests/index.html
@@ -22,11 +22,11 @@
     {{content-for "test-body"}}
 
     <script src="testem.js" integrity=""></script>
-    <script src="assets/vendor.js"></script>
-    <script src="assets/test-support.js"></script>
-    <script src="assets/hoppr-ui.js"></script>
-    <script src="assets/tests.js"></script>
-    <script src="assets/test-loader.js"></script>
+    <script src="ui/assets/vendor.js"></script>
+    <script src="ui/assets/test-support.js"></script>
+    <script src="ui/assets/hoppr-ui.js"></script>
+    <script src="ui/assets/tests.js"></script>
+    <script src="ui/assets/test-loader.js"></script>
 
     {{content-for "body-footer"}}
     {{content-for "test-body-footer"}}
